<resources>
    <string name="app_name">ZooPatna</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="mammals">
        <item>Chimpanzee</item>
        <item>Giraffe</item>
        <item>Hippopotamus</item>
        <item>Leopard</item>
        <item>Lion</item>
        <item>Otter</item>
        <item>Rhinoceros</item>
        <item>Tiger</item>
        <item>Zebra</item>
    </string-array>
    <string name="chimpanzee">

      <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:black;">

          <h3><b>CHIMPANZEES</b></h3>

          Chimpanzees are our closest living relatives, native to sub-Saharan Africa and found in the Congo Jungle. <br/>

          Chimpanzees are social animal and it is thought that human and Chimpanzees share a common ancestor.<br/>

          <br/>
          <br/>

          Sanjay Gandhi Biological Park (Patna Zoo) has one male and one female Chimpanzee named Kartik and Subhadra respectively. Both these animals were acquired from Nandankanan Zoo, Bhubneswar through animal exchange on 15.07.2012.

          <br/>

          <h3><b>FOOD HABITAT AT PATNA ZOO</b></h3>

          Rice, Curd, Banana, Pomegranate, Mango, Apple, Gram, Kheer, Egg. Dav (Coconut water), Onion & Cucumber.It is standard diet and it varies with season to season.

         </body>
        </html>
        ]]>

    </string>
     <string name="giraffe">

      <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:black;">

          <h3><b>GIRAFFE</b></h3>

          Giraffe is the tallest living terrestrial animal having an average height of around 5 meters and it is the largest ruminant.
          Giraffes live primarily in Savannahs areas in the Sub-Saharan region of Africa.

          <br/>
          <br/>

          Sanjay Gandhi Biological Park, Patna has breeding captive population of Giraffe. In the year 2006, Patna Zoo received
          01 male (Vikas) and 02 female (Shanti and Shrishti) from San Diego Zoo, U.S.A. under animal exchange progrqamme.
          One female Giraffe was born in 2011 from Vikas and Shanti and she was finally transferred to Nandankanan Zoo in the year 2012.
          Male (Vikas) was died on 23.10.2012, so Sanjay Gandhi Biological Park managed to receive one male Giraffe (Bhima)
          from Mysore Zoo in 2014 under animal exchange. At present Sanjay Gandhi Biological Park, Patna has one male (Bihma)
          and two female (Shanti and Shristi) Giraffe.

          <br/>
          <br/>

            <H3><b>FOOD HABITAT AT PATNA ZOO</b></h3>

            Deer mesh- 0.700 Kgs.</br>

            Gram- 1.250 Kg.</br>

            Wheat- 1.000 Kg.</br>

            Moong- 0.750 Kg.</br>

            Banana- 8.500 Kgs.</br>

            Carrot-	0.500 Kg.</br>

            Apple/Guava/Kheera- 7.00 Kg.</br>

            Tomato- 0.200 Kg.</br>

            Potato- 0.700 Kg.</br>

            Onion- 0.700 kg.</br>

            Greens- 17.00 Kgs.</br>

            Bran- 1.000 Kg.</br>

            per animal per day.</br>



         </body>
        </html>
        ]]>

    </string>
    <string name="hippopotamus">

      <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:black;">

          <h3><b>HIPPOPOTAMUS</b></h3>

          The term hippopotamus comes from a Greek word meaning water horse or river horse even though it is not related to horse at all.
          Hippopotamus secrete an oily red substance which gave rise to myth that they sweet blood but that is actually skin moisture and sun block which provide protection against germs.

          <br/>
          <br/>

            <H3><b>FOOD HABITAT AT PATNA ZOO</b></h3>

            Deer mesh-	4 Kgs.<br/>

            Pumpkin/brinjal/potato-	1.5 - 2.0 Kgs.<br/>

            Banana-	2 Kgs.<br/>

            Bhusa-	8-10 kgs.<br/>

            Sudan/Berseem grass-	50-55 Kgs.<br/>

            Suger cane (Nov. to Feb.)-	10-15 kgs.<br/>

            per animal per day.

         </body>
        </html>
        ]]>

    </string>
     <string name="leopards">

      <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:black;">

          <h3><b>LEOPARD</b></h3>

          Leopards are graceful medium sized big cat that is found in sub-sharan Africa, northeast Africa, central Asia, China and India.

          <br/>
          <br/>

           At present Sanjay Gandhi Biological Park has two wild captured leopard, one male (Raja) and one female (Rani),
           who were brought in the year 2012 from Guwahati Zoo. History of leopard at Patna zoo started in the year 1986
           when two wild captured female leopards named Rangeeta and Tara were received from Hazaribagh Forest Division.
           In the year 1997 one more female wild leopard named Reena received from Shahabad Forest Division. After that some more
           wild as well as captive leopards were received. In the year 1990, a male leopard (Maan Singh) was received from Delhi
           Zoo which lead to start of conservation breeding of leopard at Sanjay Gandhi Biological Park, Patna and first time two
           female leopard cubs (Asha and Nisha) were born in the year 2002 from Maan Singh and Reena.

           </br>
           </br>

            Average age	-	12-17 years.

           </br>

           <H3><b>FOOD HABITAT AT PATNA ZOO</b></h3>
           Chicken - 7.500 Kgs.</br>

           per animal per day.</br>

         </body>
        </html>
        ]]>

    </string>
    <string name="lion">

      <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:black;">

         <h3><b>LION</b></h3>

          Lion is renowned for its majesty and strength and it is the second-largest living cat after the tiger.
          Lion is the only social member of the Cat family which lives in large groups called prides.

          <br>
          <br>

          First time Patna Zoo received two male and two female lions from wild origin in the year 1978.
          These four lions started breeding the year 1982 and this lead to start of conservation breeding of lion at
          Sanjay Gandhi Biological Park.

          <br/>
          <br/>

          Patna Zoo transferred lion to Ranchi and Jaipur Zoos under animal exchange programme. Patna Zoo received two hybrid lion
          from Bokaro Zoo in the year 2003 named Rambha and Urvashi.Hyderabad Zoo provided two lion in the year 2007 named Vishal and
          Sraswati. These two lion breed successfully in the year 2012 and two cub Samrat and Sheru survived. At present Patna Zoo
          has four normal lion and two hybrid lion.
          </br>
          <H3><b>FOOD HABITAT AT PATNA ZOO</b></h3>

          Chicken- 2-2.50 Kgs.</br>

          Beef- 6-7 Kgs.</br>

          per animal per day.<br>
         </body>
        </html>
        ]]>

    </string>
    <string name="otter">

      <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:black;">

          <h3><b>OTTER SMOOTH INDIAN</b></h3>
           Sanjay Gandhi Biological Park has a nice water glass exhibit of Otter which has one male (Shahzad) and one female (Shahzadi).
           Both these two otters were seized by Banka Forest Division and transferred to Patna Zoo in the year 2006.

          <br/>
          <br/>
          <H3><b>FOOD HABITAT AT PATNA ZOO</b></h3>

          Live Fish/ Fresh Fish- 5.000 Kgs.</br>

          per animal per day.<br>


         </body>
        </html>
        ]]>

    </string>
    <string name="rhinoceros">

      <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:black;">

          <h3><b>ONE-HORNED RHINOCEROS</b></h3>
           One-horned rhinoceros (Rhinoceros unicornis) is native to Indian sub-continent and it is the largest rhino species in the
           world. One-horned rhinoceros population were severely depleted due to hunting and it is listed as vulnerable on the IUCN Red
           list.

          <br/>
          <br>

          Sanjay Gandhi Biological Park, Patna is famous for successful conservation breeding of one horned rhinoceros.

          <br/>
          <br/>

          In the mid of year 1979, this park received one pair of rhino named Kancha and Kanchi from State of Assam. Both these
          rhinos were sub-adult. Almost after 3 years, in the year 1982 one rescued rhino (named Raju) from Bettiah forest
          (at present Valmiki Tiger Reserve) came to this zoo, which led to the start of conservation breeding of rhino in this park.
          In the year 1988 one female rhino (Hartali) took birth from successful conjugation of Raju and Kanchi.

          <br/>
          <br/>

          Again in 1991, same pair of rhino bred again and one more female rhino was added in the list. The first two rhino of this
          park named Kancha and Kanchi finally lead to the birth of one male rhino in the year 1993. This showed that all rhino of
          this park are potential breeder.
          </br>
          <br/>
          Hartali the first rhino calf of this park has produced eight calf till date and she considered to be one of the most
          successful breeding female as far as captive breeding in rhino is concerned.

          <br/>
          <br/>
          Park management is very sensitive towards inbreeding of rhino. So, to improve genetic diversity one male rhino Ayodhya
          and one female rhino Gari were brought to this Park under animal exchange programme from Delhi Zoo and San diago Zoo,
          U.S.A. respectively. Sanjay Gandhi Biological Park, Patna has provided rhino to Delhi, Kanpur, Ranchi, Hyderabad zoo and
          country like U.S.A. At present Sanjay Gandhi Biological Park, have 5 male and 5 female rhinos.

          <br/>

          Park management is always striving to sustain the captive one horned rhino population by providing natural environment
          in the form of muddy moat area, clean night house, etc.

           <br/>
           <br/>

        <H3><b>FOOD HABITAT AT PATNA ZOO</b></h3>

        Deer mesh - 6.30 Kgs.</br>

        Gram-    1.40 Kgs</br>

        Wheat- 1.20 kgs.</br>

        Wheat flour- 0.85 Kg.</br>

        Bhusa-	11.5 Kgs.</br>

        Sudan/ Berseem grass-40.00 Kgs.</br>

        Sugar cane (November to February) - 15.00 Kgs.</br>

        Banana- 0.750 Kg.</br>

        Besan- 0.400 Kg.</br>

        Moong- 0.50 gm.</br>

        Bran- 0.500 Kg.</br>

        Per animal per day.</br>

         </body>
        </html>
        ]]>

    </string>
    <string name="title_section1">Rentals</string>
    <string name="title_section2">Timing</string>
    <string name="title_section3">QR code reader</string>
    <string name="title_section4">Refund &amp; Return Policy</string>
    <string name="title_section5">Privacy Policy</string>
    <string name="title_section6">Membership</string>
    <string name="title_section7">Zoo Calendar</string>
    <string name="title_section8">Comments with photo</string>
    <string name="title_section9">Terms &amp; conditions</string>
    <string name="title_section10">View Comments</string>
</resources>