<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rentals"
        android:title="@string/title_section1" />

    <item
        android:id="@+id/timing"
        android:title="@string/title_section2" />

    <item
        android:id="@+id/qr_code"
        android:title="@string/title_section3" />

    <item
        android:id="@+id/refund"
        android:title="@string/title_section4" />

    <item
        android:id="@+id/policy"
        android:title="@string/title_section5" />

    <item
        android:id="@+id/membership"
        android:title="@string/title_section6" />

    <item
        android:id="@+id/zoo_calendar"
        android:title="@string/title_section7" />

    <item
        android:id="@+id/comments"
        android:title="@string/title_section8" />

    <item
        android:id="@+id/terms"
        android:title="@string/title_section9" />
    <item
        android:id="@+id/view_comments"
        android:title="@string/title_section10" />

</menu>
